email toegevoegd aan footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <!-- =============================================== -->
 <!-- CSS files -->
 
@@ -426,7 +426,7 @@
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">&#xe0be;</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
