--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                  <div class="alert alert-success alert-dismissible">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <strong>Success!</strong> This alert box could indicate a successful or positive action.
+                  </div>
                     <h4>Sign language: Linguistic structure made visible</h4>
                     <p class="mb-4">
                       <!-- <img src="img/elise-1.jpg" class="rounded float-right" alt="" height="300"> -->
