--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
               <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
         </span>
 
+        <span id="alertBox"  align="center" style="display: inline-block;"></span>
+
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
         <div align="center" class="undisplayed">
 
