--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
               <br>
               <textarea id="suggestions" class="inputBox" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
               <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
+              <span id="alertBox" style="display: inline-block;"></span>
         </span>
 
-        <span id="alertBox"  align="right" style="display: inline-block; vertical-align:top;"></span>
+     
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
         <div align="center" class="undisplayed">
