--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
               <label for="suggestions" style="display: inline-block;">Suggestions box: </label>
               <br>
-              <textarea id="suggestions" class="inputBox" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
+              <textarea id="suggestions" class="inputBox" style="margin-bottom:-10px;" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
               <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
               <span id="alertBox" style="display: inline-block; z-index:20; position: absolute;"></span>
         </span>
