--- a/index.html
+++ b/index.html
@@ -181,9 +181,10 @@
 
               <label for="suggestions" style="display: inline-block;">Suggestions box: </label>
               <br>
-              <textarea id="suggestions" class="inputBox" style="margin-bottom:-10px;" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
-              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
+              <textarea id="suggestions" class="inputBox" style="position: absolute; z-index:0;" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
               <span id="alertBox" style="display: inline-block; z-index:20; position: absolute;"></span>
+              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);'/>
+              
         </span>
 
     
