--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
 
               <label for="suggestions" style="display: inline-block;">Suggestions box: </label>
               <br>
-              <textarea id="suggestions" class="inputBox" style="position: absolute; z-index:0;" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
+              <textarea id="suggestions" class="inputBox" style="position: relative; z-index:0;" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
               <span id="alertBox" style="display: inline-block; z-index:20; position: absolute;"></span>
-              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);'/>
+              <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value);'/>
               
         </span>
 
