--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <section class="projects-section bg-white fadeIn undisplayed" id="Translate">
     <div class="container" height="100%">
-      <div id="alertBox" style="z-index:20; position: fixed;"></div>
+      <div id="alertMainTran" style="z-index:20; position: fixed;"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -471,10 +471,11 @@
 
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="js/avatarJS.js"></script>
-<!-- script specific to main page -->
-<script language="javascript" type="text/javascript" src="js/signlabJS.js"></script>
 <!-- script for shared functions across all pages -->
 <script language="javascript" type="text/javascript" src="js/generalJS.js"></script>
+<!-- script specific to main page -->
+<script language="javascript" type="text/javascript" src="js/signlabJS.js"></script>
+
 
 </body>
 </html>
