--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
 <section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
 
       <div class="container" height="100%">
+        <div id="alertTutorial" class="alertBox"></div>
           <div class="project-text pt-0 text-lg-left">
               <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
               <span id="explanation" class="explSpan" align="left" style="width: 300px; vertical-align:top;">
