--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvatar av1" align="center" style="width: 300px"></span>
+            <span id="avatarTut" class="undisplayed" align="center" style="width: 300px"></span>
             <!-- <div class="CWASAAvatar" align="center" ></div>-->          
           </div>
       </div>
