tutorial pagina radio buttons werkend

--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
         <div id="alertTutorial" class="alertBox"></div>
           <div class="project-text pt-0 text-lg-left">
               <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
-              <span id="explanation" class="explSpan" align="left" style="width: 300px; vertical-align:top;">
-                <div id="explText" class ="explSiGML" style="width: 280px;"></div>
+              <span id="explanation" class="explSpan" align="left">
+                <div id="explText" class="explSiGML" align="center"></div>
               </span>
 
             <span align="left" style="display:inline-block; vertical-align:top; margin-right:20px; margin-left: 20px;">
@@ -359,7 +359,7 @@
               <br>
               
               <!-- Defines the button and label displayed for the option "explain+ava" -->
-              <input type="radio" name="expl" id="explainAva" value="explainAva" onclick="changeFunc(this);">
+              <input type="radio" name="expl" id="explainAva" value="explAva" onclick="changeFunc(this);">
               <label for="explainAva" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               
