--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <!-- Tutorial section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
 
-      <div class="container" height="100%"  width=100%>
+      <div class="container-fluid" height="100%">
         <div id="alertTutorial" class="alertBox"></div>
           <div class="project-text pt-0 text-lg-left">
               <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
