alle containers op de hoofwebsite zijn nu containers-fluid zodat ze de hele breedte van de pagina spannen

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="About">
-    <div class="container">
+<section class="projects-section bg-light fadeIn" id="About" align="center">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -132,8 +132,8 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate">
-    <div class="container" height="100%">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" align="center">
+    <div class="container-fluid" height="100%">
       <div id="alertMainTran" class="alertBox" style="z-index:20; position: fixed;"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -223,9 +223,9 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="People">
+<section class="projects-section bg-light fadeIn undisplayed" id="People" align="center">
 
-    <div class="container" height="100%">
+    <div class="container-fluid" height="100%">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -304,9 +304,9 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Publications">
+<section class="projects-section bg-white fadeIn undisplayed" id="Publications" align="center">
 
-      <div class="container" height="100%">
+      <div class="container-fluid" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Publications</h2>
               <p class="text-black-50 mb-0">
@@ -321,9 +321,9 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Funding">
+<section class="projects-section bg-white fadeIn undisplayed" id="Funding" align="center">
 
-      <div class="container" height="100%">
+      <div class="container-fluid" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Funding</h2>
               <p class="text-black-50 mb-0">
@@ -342,7 +342,7 @@
 <!-- Tutorial section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
 
-      <div class="container-fluid" height="100%">
+      <div class="container-fluid" height="100%" align="center">
         <div id="alertTutorial" class="alertBox"></div>
           <div class="project-text pt-0 text-lg-left">
               <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
@@ -398,7 +398,7 @@
 <!-- Resources section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Resources">
 
-      <div class="container" height="100%">
+      <div class="container-fluid" height="100%" align="center">
           <div class="project-text pt-0 text-lg-left">
               <h2>Further resources</h2>
               <p class="mb-3 text-black-50">
@@ -422,7 +422,7 @@
 
 <!-- Projects -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Projects">
-    <div class="container">
+    <div class="container-fluid" align="center">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
