--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <!--================================================================-->
 
 <!-- About -->
-<section class="projects-section bg-light fadeIn" id="About" align="center">
-    <div class="container-fluid">
+<section class="projects-section bg-light fadeIn" id="About">
+    <div class="container-fluid" align="center">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -132,8 +132,8 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate" align="center">
-    <div class="container-fluid" height="100%">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate">
+    <div class="container-fluid" height="100%"  align="center">
       <div id="alertMainTran" class="alertBox" style="z-index:20; position: fixed;"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -223,9 +223,9 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="People" align="center">
+<section class="projects-section bg-light fadeIn undisplayed" id="People">
 
-    <div class="container-fluid" height="100%">
+    <div class="container-fluid" height="100%" align="center">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -304,9 +304,9 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Publications" align="center">
+<section class="projects-section bg-white fadeIn undisplayed" id="Publications">
 
-      <div class="container-fluid" height="100%">
+      <div class="container-fluid" height="100%"  align="center">
           <div class="project-text pt-0 text-lg-left">
               <h2>Publications</h2>
               <p class="text-black-50 mb-0">
@@ -321,9 +321,9 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Funding" align="center">
+<section class="projects-section bg-white fadeIn undisplayed" id="Funding">
 
-      <div class="container-fluid" height="100%">
+      <div class="container-fluid" height="100%"  align="center">
           <div class="project-text pt-0 text-lg-left">
               <h2>Funding</h2>
               <p class="text-black-50 mb-0">
