avatar terugkrijgen op tutorial pagina

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             </span>
 
             <!-- Defines the avatar at the end of the tutorial page -->
-            <span id="avatarTut" class="undisplayed" align="center" style="width: 400px"></span>
+            <span id="avatarTut" class="undisplayed" align="right" style="width: 400px"></span>
                     
           </div>
       </div>
