--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
-              <input type="radio" id="explainDisplay" name="expl" value="explain" onclick="changeFunc(this);" checked>
+              <input type="radio" id="explainDisplay" name="expl" value="explain" onclick="changeFunc(this);">
               <label for="avatar" style="margin-right: 5px">Explanation SiGML</label>
               <br>
               
               <!-- Defines the button and label displayed for the option "explain+ava" -->
-              <input type="radio" name="expl" id="explainAva" value="explAva" onclick="changeFunc(this);">
+              <input type="radio" name="expl" id="explainAva" value="explAva" onclick="changeFunc(this);" checked>
               <label for="explainAva" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               
