--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
+    <div class="container-fluid" align="center">
         <a class="navbar-brand" href="#page-top">
         <img src="images/hand-icon.png" height="25">
           SignLab Amsterdam
