--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <div class="row">
           <div class="col-md-4">
             <textarea id="explSiGML1" readonly style="white-space: pre;">
-              '<?xml version="1.0" encoding="UTF-8"?>
+              <?xml version="1.0" encoding="UTF-8"?>
                 <sigml>
                   <hamgestural_sign gloss="HUIS">
                     <sign_nonmanual>
@@ -381,7 +381,7 @@
                       </par_motion>
                     </sign_manual>
                   </hamgestural_sign>
-                </sigml>'
+                </sigml>
             </textarea>
           </div>
 
