--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           </div>
 
           <div class="col-md-4">
-              <input type="button" class="btn btn-primary" id="playTut" value="Play" onclick='playText(document.getElementById("explSiGML1").value'/>
+              <input type="button" class="btn btn-primary" id="playTut" value="Play" onclick='playText(document.getElementById("explSiGML1").value)'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();'/>
               <br>
               <br>
