--- a/index.html
+++ b/index.html
@@ -386,12 +386,13 @@
           </div>
 
           <div class="col-md-4">
-              <input type="button" class="btn btn-primary" id="playTut" value="Play" onclick='playText(document.getElementById("explSiGML1").value)'/>
+              <input type="button" class="btn btn-primary" value="Play" onclick='playText(document.getElementById("explSiGML1").value)'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();'/>
               <br>
+              
               <br>
-              <label id="speedLabelTut" for="speedAdjTut" style="display: none;">Adjust speed: </label>
-              <span id="speedAdjTut" class="undisplayed" style="margin-bottom:5px"></span>
+              <label style="display: none;">Adjust speed: </label>
+              <span class="undisplayed" style="margin-bottom:5px"></span>
               <br>
               
               <br>
