--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
         </div>
 
         <div class="row">
+           <div class="col-md-4">
+            <span class="CWASAAvatar av1" style="width: 350px"></span>
+          </div>
+
           <div class="col-md-4">
               <input type="button" class="btn btn-primary" value="Play" onclick='playText(document.getElementById("explSiGML1").value)'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();'/>
@@ -366,10 +370,6 @@
               <br>
               <label style="display: none;">Gloss: </label>
               <input class="undisplayed" value="[none]" type="text">
-          </div>
-          
-          <div class="col-md-4">
-            <span class="CWASAAvatar av1" align="right" style="width: 350px"></span>
           </div>
           
           <div class="col-md-4">
