--- a/index.html
+++ b/index.html
@@ -414,13 +414,13 @@
         <div class="row">
             
           <div class="col-md-4">
-            <span id="explanation" class="explSpan" align="left">
-              <div id="explText" class="explSiGML" align="center"></div>
+            <span id="explanation" class="explSpan">
+              <div id="explText" class="explSiGML"></div>
             </span>
           </div>
 
           <div class="col-md-4">
-            <span align="left" style="display:inline-block; vertical-align:top; margin-right:20px; margin-left: 20px;">
+            <span style="display:inline-block; vertical-align:top; margin-right:20px; margin-left: 20px;">
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
@@ -456,7 +456,7 @@
           </div>
 
           <div class="col-md-4">
-            <span id="avatarTut" class="CWASAAvatar av2" align="right" style="width: 350px"></span>
+            <span id="avatarTut" class="CWASAAvatar av2" style="width: 350px"></span>
           </div>
         </div>
 
