--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
 
         <div class="row">
            <div class="col-md-4">
-            <span class="CWASAAvatar av1" style="width: 350px"></span>
           </div>
 
           <div class="col-md-4">
+              <span class="CWASAAvatar av1" style="width: 350px; height: 400px;"></span>
               <input type="button" class="btn btn-primary" value="Play" onclick='playText(document.getElementById("explSiGML1").value)'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();'/>
               <br>
