--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           </div>
           
           <div class="col-md-4">
-            <textarea id="explSiGML1" readonly class="CWASASiGMLText av1" style="width: 350px; height: 500px;">
+            <textarea id="explSiGML1" readonly style="width: 350px; height: 500px;">
 <?xml version="1.0" encoding="UTF-8"?>
 <sigml>
   <hamgestural_sign gloss="HUIS">
