--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 
 <!-- Tutorial section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
+<section class="projects-section bg-white fadeIn undisplayed" id="Tutorial" onload="CWASA.init();">
 
       <div class="container-fluid" height="100%" align="center">
         <div id="alertTutorial" class="alertBox"></div>
