--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
 
            <div class="col-md-4">
               <span class="CWASAAvatar av1" style="width: 350px; height: 400px;"></span>
-              <input type="button" class="btn btn-primary av1" value="Play" onclick='playText(document.getElementById("explSiGML1").value,"1")'/>
-              <input type="button" class="btn btn-primary av1" value="Stop" onclick='CWASA.stopSiGML("1");'/>
+              <input type="button" class="btn btn-primary av1" value="Play" onclick='playText(document.getElementById("explSiGML1").value,1)'/>
+              <input type="button" class="btn btn-primary av1" value="Stop" onclick='CWASA.stopSiGML(1);'/>
               <br>
               
               <br>
