boxje verschijnt wanneer minuten in de zin voorkomt

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <section class="projects-section bg-white fadeIn undisplayed" id="Translate">
     <div class="container-fluid" height="100%"  align="center">
-      <div id="alertMainTran" class="alertBox" style="z-index:20; position: fixed;"></div>
+      <div id="alertMainTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
