--- a/cwa/index.html
+++ b/cwa/index.html
@@ -42,6 +42,7 @@
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="../css/cwasa-reduced.css">
 
+
 </head>
 
 <body id="page-top" style="text-align: center;" onload="CWASA.init();">
@@ -63,7 +64,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" style="width: 100%;">
-        <a class="navbar-brand" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -72,13 +73,13 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto" role="tablist">
-              <li class="nav-item"><a class="nav-link active" role="tab" href="#ProjectInfo" onclick="openTab(event, 'ProjectInfo');">Project Information</a></li>
-              <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translate</a></li>
-              <li class="nav-item"><a class="nav-link" role="tab" href="#About" onclick="openTab(event, 'About');">About us</a></li>
-              <li class="nav-item"><a class="nav-link" role="tab" href="#Suggestions" onclick="openTab(event, 'Suggestions');">Suggestions</a></li>
-              <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Further Resources</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Information</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">About Us</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Suggestions">Suggestions</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
             </ul>
         </div>
     </div>
@@ -100,8 +101,8 @@
 <!--================================================================-->
 
 <!-- ProjectInfo -->
-<section class="projects-section bg-light fadeIn" id="ProjectInfo" style="margin-top:20px;">
-    <div class="container-fluid" style="margin-top:20px;">
+<section class="projects-section bg-light" id="ProjectInfo">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0" style="margin-top:40px;">
             <div class="col" style="padding: 0; margin-right:40px;">
@@ -127,7 +128,7 @@
                 <div class="bg-light text-center h-100 project" style="padding: 0; margin:0px;">
                     <div class="d-flex h-100" style="padding: 0; margin:0px;">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left" style="padding: 0; margin:0px;">
-                            <h4 class="text-black">How does this tool help?</h4>
+                            <h4 class="text-black">How does this website help?</h4>
                             <p class="mb-1 text-black-50">
                             It allows healthcare professionals to translate sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands. Translations are displayed by means of videos and avatar animations.
                             </p>
@@ -165,7 +166,7 @@
                           <p class="mb-1 text-black-50">
                             <b>Important: caution required in the use of signing avatars</b>
                             <br>
-                            The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement. This tool is therefore not meant to serve as a replacement for trained sign language interpreters, but as a back-up for situations in which an interpreter cannot be present. This also means that the range of sentences that our tool can translate is very limited.
+                            The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement. This tool is therefore not meant to serve as a replacement for trained sign language interpreters, but as a back-up for situations in which an interpreter cannot be present.
                           </p>
                           <hr class="d-none d-lg-block mb-0 ml-0" />
                       </div>
@@ -189,8 +190,8 @@
 <!--================================================================-->
 
 <!-- Translate -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Translate" style="margin-top:20px;">
-    <div class="container-fluid" style="width:100%; text-align:center; margin-top:20px;">
+<section class="projects-section bg-white" id="Translate" style="margin-top:0px;">
+    <div class="container-fluid" style="width:100%; text-align:center;">
      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -250,7 +251,7 @@
               <div id="weeksBox" class="varBox">
                <label for="weeks" style="display: inline-block;">Number of weeks:</label>
                <input type="number" id="weeks" name="weeks" min="1" max="10" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 11','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
               </div>
 
               <div id="monthsBox" class="varBox">
@@ -334,17 +335,17 @@
 <!--================================================================-->
 
 <!-- About us section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="About" style="margin-top:20px;">
+<section class="projects-section bg-light" id="About" style="margin-top:0px;">
 
     <div class="container-fluid" style="margin-top:20px;">
 
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5" >
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
             <!-- Column for Team and Funding -->
             <div class="col-xl-6 col-lg-6">
 
                 <!-- Team -->
-                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
+                <div class="project-text text-center text-lg-left">
 
                     <h2 class="mb-4">Team</h2>
 
@@ -376,7 +377,7 @@
 
                 <!-- East Anglia -->
 
-                <div class="project-text text-center text-lg-left" style="padding-top: 0px;">
+                <div class="project-text text-center text-lg-left">
                     <h2 class="mb-4">Partners</h2>
                     <h5>University of East Anglia</h5>
                     <p class="text-black-50 mb-3 mt-1">
@@ -422,7 +423,7 @@
 <!--================================================================-->
 
 <!-- Suggestions section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Suggestions" style="margin-top:20px;">
+<section class="projects-section bg-white" id="Suggestions">
       <div class="container-fluid" style="margin-top:20px;">
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <!-- Column for suggestions  -->
@@ -448,8 +449,8 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-light fadeIn undisplayed" id="Resources" style="margin-top:20px;">
-      <div class="container-fluid" style="margin-top:20px;">
+<section class="projects-section bg-light" id="Resources" style="margin-top:20px;">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <p class="mb-3 text-black-50">
                 The
@@ -471,7 +472,7 @@
 <!--================================================================-->
 
 <!-- Footer-->
-<footer class="footer bg-white small text-center text-black-50"><div class="container" style="vertical-align: bottom; margin-bottom: 20px;">&copy;2020 SignLab Amsterdam <i class="fas fa-envelope"></i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
