margins en padding verwijdert/aangepast aan nieuwe class definities

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" align="center">
+    <div class="container-fluid" style="width: 100%; margin-top: 0px;">
         <a class="navbar-brand" href="#page-top">
         <img src="images/hand-icon.png" height="25">
           SignLab Amsterdam
@@ -92,7 +92,7 @@
 
 <!-- About -->
 <section class="projects-section bg-light fadeIn" id="About">
-    <div class="container-fluid" align="center">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -135,15 +135,15 @@
 <!-- Translate -->
 
 <section class="projects-section bg-white fadeIn undisplayed" id="Translate">
-    <div class="container-fluid" height="100%"  align="center">
+    <div class="container-fluid" style="width: 100%;">
       <div id="alertMainTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="vertical-align:top;"></span>
+        <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; text-align: left;"></span>
         <!--================================================================-->
 
-        <span align="left" style="display:inline-block; vertical-align:top; margin-left: 30px;">
+        <span style="display:inline-block; vertical-align:top; margin-left: 30px; text-align: left;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose an output option:</h4>
             </label>
@@ -191,7 +191,7 @@
 
     
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
-        <div align="center" class="undisplayed">
+        <div class="undisplayed" style="text-align: center;">
 
               <span style="font-size: 90%;" >
                 Sign/Frame:
@@ -206,7 +206,7 @@
         </div>
 
 
-        <div align="center">
+        <div style="text-align: center;">
             <!-- FR: I've made the following status log field invisible, if you comment it out completely the avatar doesn't work anymore -->
             <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
             </textarea>
@@ -217,7 +217,7 @@
 
         <!-- SToCA applet element panel -->
         <!--================================================================-->
-        <div class="SToCA" align="center" ></div>
+        <div class="SToCA" tyle="text-align: center;"></div>
         <!--================================================================-->
     </div>
 </section>
@@ -227,7 +227,7 @@
 <!-- Project info section -->
 <section class="projects-section bg-light fadeIn undisplayed" id="People">
 
-    <div class="container-fluid" height="100%" align="center">
+    <div class="container-fluid">
 
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
 
@@ -308,7 +308,7 @@
 <!-- Publications section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Publications">
 
-      <div class="container-fluid" height="100%"  align="center">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <h2>Publications</h2>
               <p class="text-black-50 mb-0">
@@ -325,7 +325,7 @@
 <!-- Funding section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Funding">
 
-      <div class="container-fluid" height="100%"  align="center">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <h2>Funding</h2>
               <p class="text-black-50 mb-0">
@@ -344,7 +344,7 @@
 <!-- Tutorial section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Tutorial">
 
-      <div class="container-fluid" height="100%" align="center">
+      <div class="container-fluid">
         <div id="alertTutorial" class="alertBox"></div>
         <h2 align="center" style="margin-bottom: 20px;">Tutorial</h2>
         
@@ -471,7 +471,7 @@
 <!-- Resources section -->
 <section class="projects-section bg-white fadeIn undisplayed" id="Resources">
 
-      <div class="container-fluid" height="100%" align="center">
+      <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left">
               <h2>Further resources</h2>
               <p class="mb-3 text-black-50">
@@ -495,7 +495,7 @@
 
 <!-- Projects -->
 <section class="projects-section bg-light fadeIn undisplayed" id="Projects">
-    <div class="container-fluid" align="center">
+    <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
