--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
                 <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translator</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translator</a></li> -->
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People" onclick="openTab(event, 'People');">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications" onclick="openTab(event, 'Publications');">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Funding" onclick="openTab(event, 'Funding');">Funding</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial" onclick="openTab(event, 'Tutorial');">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Resources</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial" onclick="openTab(event, 'Tutorial');">SiGML</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Resources</a></li> -->
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Projects" onclick="openTab(event, 'Projects');">Projects</a></li>
             </ul>
         </div>
