funding en projects samen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- CSS file for bootstrap grayscale theme -->
 <link rel="stylesheet" href="css/grayscalestyles.css">
+<!-- CSS file for flag icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="css/cwasa-reduced.css">
 
@@ -66,7 +68,7 @@
                 <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translator</a></li> -->
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People" onclick="openTab(event, 'People');">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications" onclick="openTab(event, 'Publications');">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Funding" onclick="openTab(event, 'Funding');">Funding</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Funding" onclick="openTab(event, 'Funding');">Funding</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial" onclick="openTab(event, 'Tutorial');">SiGML</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Resources</a></li> -->
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Projects" onclick="openTab(event, 'Projects');">Projects</a></li>
@@ -321,7 +323,7 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Funding">
+<!-- <section class="projects-section bg-white fadeIn undisplayed" id="Funding">
 
       <div class="container-fluid">
           <div class="project-text pt-0 text-lg-left no-top-padding">
@@ -329,12 +331,12 @@
               <p class="text-black-50 mb-0">
                 We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
                 <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-              </p>
+              </p> -->
               <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
-          </div>
+         <!--  </div>
       </div>
 
-</section>
+</section> -->
 
 <!--================================================================-->
 
@@ -497,7 +499,8 @@
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                     <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">Covid-19 ZonMw project</a></h4>
                     <p class="mb-4">
-                      As a result of Covid-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of Covid-19 into NGT.
+                      As a result of Covid-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of Covid-19 into NGT. We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
+                <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
                     </p>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
